updated tests in BookControllerTests